# Rosalind

./: .gitignore  GC.py  Gene.py  README.md  cons.py  fasta.py  genes.p  hamm.py  iprb.py  prot.py  pyproject.toml  setup.py  subs.py  test_test.py
blob/main/: LICENSE  pyproject.toml
rosalind/: CONS.py  GC.py  __init__.py  fasta.py  test_test.py
rosalind/Rosalind.egg-info/: PKG-INFO  SOURCES.txt
tests/: FASTA.txt  GC_test.py  file_io_tests.py  generead_test.py  genes.p  main_test.py
