[build-system]
requires = ["flit_core >=2,<4"]
build-backend = "flit_core.buildapi"

[tool.flit.metadata]
module = "rosalind"
author = "Daniel Crookston"
author-email = "dcrookston@gmail.com"
classifiers = ["License :: OSI Approved :: MIT License"]
description-file = "README.md"

[tool.flit.metadata.requires-extra]
test = [
    "pytest",
    "pytest-cov",
    "coverage>=5.3",
    "mypy>=0.800",
]

[tool.tox]
legacy_tox_ini = """
; tox configuration file for running tests on local dev env and Travis CI.
;
; The local dev environment will be executed against latest released Twisted.
; The coverage is reported only and local dev and not on Travis-CI as there
; we have separate reported (ex codecov.io)

[tox]
envlist =
    py{39}
minversion=3.5
isolated_build=true
requires=
    virtualenv >= 20.4.0

[testenv]
extras = test
commands = pytest {posargs}
wheel = True
wheel_build_env = build

[testenv:build]
# empty environment to build universal wheel once per tox invocation
# https://github.com/ionelmc/tox-wheel#build-configuration

[testenv:release]
deps = pep517
whitelist_externals =
    cp
    rm
commands =
    rm -rf {toxinidir}/dist
    {envpython} -m pep517.build --source --out-dir={toxinidir}/dist {toxinidir}

[testenv:mypy]
commands = mypy --strict .
"""